Fix circle bottom spacing.

--- a/src/styles/components/pages/landingPages/steps.scss
+++ b/src/styles/components/pages/landingPages/steps.scss
@@ -18,9 +18,13 @@
   .circles {
     width: 100%;
     position: absolute;
-    bottom: 8rem;
+    bottom: 5rem;
     display: flex;
     justify-content: center;
+
+    @media (min-width: $tablet) {
+      bottom: 7rem;
+    }
 
     svg {
       color: $white;
